--- a/packages/stylelint-config/package.json
+++ b/packages/stylelint-config/package.json
@@ -6,8 +6,9 @@
   "author": "Masonite",
   "license": "MIT",
   "peerDependencies": {
-    "stylelint": "^8.3.0 || ^9.0.0",
-    "stylelint-config-recommended": "^2.1.0"
+    "stylelint": "^9.10.1",
+    "stylelint-scss": "^3.5.4",
+    "stylelint-config-recommended-scss": "^3.2.0"
   },
   "files": [
     "index.js"
