--- a/packages/stylelint-config/package.json
+++ b/packages/stylelint-config/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@masonite/stylelint-config",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Masonite's stylelint config, following our styleguide",
   "main": "index.js",
   "author": "Masonite",
   "license": "MIT",
   "peerDependencies": {
     "stylelint": "^9.10.1",
-    "stylelint-scss": "^3.5.4",
-    "stylelint-config-recommended-scss": "^3.2.0"
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-scss": "^3.5.4"
   },
   "files": [
     "index.js"
